Further breaks genMustMatchersTests into smaller pieces.